Increase alarm volume gradually

--- a/alarms.cfg
+++ b/alarms.cfg
@@ -2,5 +2,7 @@ alarms:
 {
     daily = "08:30"
     by_day = { Mon = "06:15"; Tue = "06:15"; Wed = "06:15"; Thu = "06:15"; };
-    sound = "data/05 Come Away With Me.mp3"
+    sound = "alarms/08Ocean.mp3"
+	initial_volume = 0
+	final_volume = 30
 };
